<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/activateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_activate_title"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/activateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_activate_text"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/delTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_del_title"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/delText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_del_text"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

</LinearLayout>